[tool.poetry]
name = "repl_python3_beta_DevOps-1"
version = "0.1.0"
description = ""
authors = ["ManavAgarwal01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
